--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: go-user-app
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+  selector:
+    app: go-user-app
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
